Μεταγλωττιστές/Εργαστήριο/Εργασία Β-2/bison-vivh/4-bison-code.output
Terminals unused in grammar

   DELIMITER
   KEYWORD
   COMMENT
   UNKNOWN_TOKEN
   AMPERSAND
   BACKSLASH_NEWLINE


State 4 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 73 conflicts: 1 reduce/reduce
State 75 conflicts: 1 reduce/reduce
State 109 conflicts: 1 reduce/reduce
State 115 conflicts: 1 shift/reduce
State 121 conflicts: 2 shift/reduce, 1 reduce/reduce
State 122 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce, 3 reduce/reduce
State 160 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program NEWLINE
    3        | program expr NEWLINE
    4        | program error NEWLINE
    5        | program expr

    6 number: INTEGER
    7       | FLOAT
    8       | NEG number

    9 term: IDENTIFIER
   10     | number

   11 multiple_float: FLOAT
   12               | FLOAT COMMA multiple_float

   13 multiple_int: INTEGER
   14             | INTEGER COMMA multiple_int

   15 multiple_newline: NEWLINE
   16                 | NEWLINE multiple_newline

   17 array: LEFT_AR multiple_int RIGHT_AR
   18      | LEFT_AR multiple_float RIGHT_AR
   19      | LEFT_AR string RIGHT_AR
   20      | IDENTIFIER LEFT_AR multiple_int RIGHT_AR
   21      | IDENTIFIER LEFT_AR multiple_float RIGHT_AR
   22      | IDENTIFIER LEFT_AR string RIGHT_AR

   23 array_plus: LEFT_AR multiple_int RIGHT_AR PLUS LEFT_AR multiple_int RIGHT_AR
   24           | LEFT_AR multiple_float RIGHT_AR PLUS LEFT_AR multiple_float RIGHT_AR
   25           | LEFT_AR string RIGHT_AR PLUS LEFT_AR string RIGHT_AR

   26 values: term
   27       | array
   28       | STRING

   29 multiple_values: values
   30                | values COMMA multiple_values

   31 variable_list: IDENTIFIER
   32              | IDENTIFIER COMMA variable_list

   33 assignment: /* empty */
   34           | variable_list ASSIGNOP variable_list
   35           | variable_list ASSIGNOP multiple_values

   36 string: STRING
   37       | string COMMA STRING

   38 ret: RETURN INTEGER
   39    | RETURN IDENTIFIER

   40 print_func: PRINT LEFT_PT string RIGHT_PT
   41           | PRINT LEFT_PT variable_list RIGHT_PT
   42           | PRINT LEFT_PT multiple_expressions_no_semi RIGHT_PT
   43           | PRINT LEFT_PT STRING COMMA IDENTIFIER RIGHT_PT
   44           | PRINT LEFT_PT STRING COMMA expr_no_semi RIGHT_PT
   45           | PRINT LEFT_PT IDENTIFIER RIGHT_PT
   46           | PRINT LEFT_PT IDENTIFIER array RIGHT_PT

   47 declaration: TYPE variable_list
   48            | TYPE array
   49            | TYPE assignment

   50 multiple_expressions_functions: LEFT_BR expr
   51                               | NEWLINE LEFT_BR expr NEWLINE
   52                               | NEWLINE LEFT_BR NEWLINE multiple_expressions NEWLINE
   53                               | NEWLINE LEFT_BR NEWLINE multiple_expressions

   54 multiple_expressions: expr
   55                     | multiple_expressions expr
   56                     | multiple_expressions multiple_newline expr

   57 multiple_expressions_no_semi: expr_no_semi
   58                             | multiple_expressions_no_semi COMMA expr_no_semi

   59 scan_func: SCAN LEFT_PT IDENTIFIER RIGHT_PT

   60 len_func: LEN LEFT_PT STRING RIGHT_PT
   61         | LEN LEFT_PT array RIGHT_PT
   62         | LEN LEFT_PT IDENTIFIER RIGHT_PT

   63 cmp_func: CMP LEFT_PT STRING COMMA STRING RIGHT_PT
   64         | CMP LEFT_PT IDENTIFIER COMMA IDENTIFIER RIGHT_PT
   65         | CMP LEFT_PT STRING COMMA IDENTIFIER RIGHT_PT
   66         | CMP LEFT_PT IDENTIFIER COMMA STRING RIGHT_PT
   67         | CMP LEFT_PT number COMMA number RIGHT_PT

   68 func_def: FUNC IDENTIFIER LEFT_PT TYPE IDENTIFIER COMMA TYPE IDENTIFIER RIGHT_PT multiple_expressions_functions RIGHT_BR

   69 func_call: IDENTIFIER LEFT_PT term COMMA term RIGHT_PT

   70 cmp_operator: term CMP_OPERATOR term

   71 cmp_operator_multiple: cmp_operator
   72                      | cmp_operator CMP_OPERATOR term
   73                      | cmp_operator CMP_OPERATOR cmp_operator_multiple

   74 arith_operation: term
   75                | arith_operation PLUS arith_operation
   76                | arith_operation MINUS arith_operation
   77                | arith_operation TIMES arith_operation
   78                | arith_operation DIVIDE arith_operation
   79                | MINUS arith_operation
   80                | arith_operation POWER arith_operation
   81                | LEFT_PT arith_operation RIGHT_PT

   82 logical_operator: IDENTIFIER LOGIC_OPERATOR IDENTIFIER
   83                 | LOG_NOT IDENTIFIER
   84                 | cmp_operator LOGIC_OPERATOR cmp_operator
   85                 | LOG_NOT RIGHT_PT cmp_operator LEFT_PT

   86 logical_operator_multiple: logical_operator
   87                          | logical_operator LOGIC_OPERATOR IDENTIFIER
   88                          | LOG_NOT RIGHT_PT logical_operator LEFT_PT
   89                          | logical_operator LOGIC_OPERATOR logical_operator_multiple

   90 if_func: IF LEFT_PT cmp_operator_multiple RIGHT_PT expr_no_semi
   91        | IF LEFT_PT cmp_operator_multiple RIGHT_PT LEFT_BR multiple_expressions RIGHT_BR
   92        | IF LEFT_PT logical_operator_multiple RIGHT_PT expr_no_semi
   93        | IF LEFT_PT logical_operator_multiple RIGHT_PT LEFT_BR multiple_expressions RIGHT_BR

   94 while_func: WHILE LEFT_PT cmp_operator_multiple RIGHT_PT multiple_expressions_functions RIGHT_BR
   95           | WHILE LEFT_PT logical_operator_multiple RIGHT_PT multiple_expressions_functions RIGHT_BR

   96 for_func: FOR LEFT_PT assignment SEMICOLON cmp_operator_multiple SEMICOLON plus_minus RIGHT_PT multiple_expressions_functions RIGHT_BR
   97         | FOR LEFT_PT assignment SEMICOLON logical_operator_multiple SEMICOLON plus_minus RIGHT_PT multiple_expressions_functions RIGHT_BR

   98 plus_minus: DOUBLE_PLUS term
   99           | DOUBLE_MINUS term
  100           | term DOUBLE_PLUS
  101           | term DOUBLE_MINUS

  102 expr_assignment: IDENTIFIER ASSIGNOP arith_operation
  103                | IDENTIFIER ASSIGNOP cmp_operator_multiple
  104                | IDENTIFIER ASSIGNOP logical_operator_multiple
  105                | IDENTIFIER ASSIGNOP array_plus
  106                | IDENTIFIER ASSIGNOP values

  107 return: RETURN values

  108 expr_no_semi: scan_func
  109             | len_func
  110             | print_func
  111             | cmp_func
  112             | declaration
  113             | cmp_operator_multiple
  114             | logical_operator_multiple
  115             | if_func
  116             | ret
  117             | arith_operation

  118 expr: expr_no_semi SEMICOLON
  119     | print_func SEMICOLON
  120     | expr_assignment SEMICOLON
  121     | assignment SEMICOLON
  122     | func_def
  123     | func_call SEMICOLON
  124     | arith_operation SEMICOLON
  125     | while_func
  126     | for_func
  127     | array SEMICOLON
  128     | array_plus SEMICOLON
  129     | return SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 4
DELIMITER (258)
IDENTIFIER (259) 9 20 21 22 31 32 39 43 45 46 59 62 64 65 66 68 69
    82 83 87 102 103 104 105 106
KEYWORD (260)
STRING (261) 28 36 37 43 44 60 63 65 66
INTEGER (262) 6 13 14 38
FLOAT (263) 7 11 12
PLUS (264) 23 24 25 75
MINUS (265) 76 79
TIMES (266) 77
DIVIDE (267) 78
NEG (268) 8
POWER (269) 80
COMMENT (270)
UNKNOWN_TOKEN (271)
NEWLINE (272) 2 3 4 15 16 51 52 53
PRINT (273) 40 41 42 43 44 45 46
LEFT_PT (274) 40 41 42 43 44 45 46 59 60 61 62 63 64 65 66 67 68 69
    81 85 88 90 91 92 93 94 95 96 97
RIGHT_PT (275) 40 41 42 43 44 45 46 59 60 61 62 63 64 65 66 67 68 69
    81 85 88 90 91 92 93 94 95 96 97
SEMICOLON (276) 96 97 118 119 120 121 123 124 127 128 129
ASSIGNOP (277) 34 35 102 103 104 105 106
CMP_OPERATOR (278) 70 72 73
TYPE (279) 47 48 49 68
SCAN (280) 59
LEN (281) 60 61 62
CMP (282) 63 64 65 66 67
COMMA (283) 12 14 30 32 37 43 44 58 63 64 65 66 67 68 69
FUNC (284) 68
LEFT_BR (285) 50 51 52 53 91 93
RIGHT_BR (286) 68 91 93 94 95 96 97
IF (287) 90 91 92 93
WHILE (288) 94 95
FOR (289) 96 97
RETURN (290) 38 39 107
DOUBLE_PLUS (291) 98 100
DOUBLE_MINUS (292) 99 101
LOGIC_OPERATOR (293) 82 84 87 89
LOG_NOT (294) 83 85 88
RIGHT_AR (295) 17 18 19 20 21 22 23 24 25
LEFT_AR (296) 17 18 19 20 21 22 23 24 25
AMPERSAND (297)
BACKSLASH_NEWLINE (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1 2 3 4 5, on right: 0 2 3 4 5
number (46)
    on left: 6 7 8, on right: 8 10 67
term (47)
    on left: 9 10, on right: 26 69 70 72 74 98 99 100 101
multiple_float (48)
    on left: 11 12, on right: 12 18 21 24
multiple_int (49)
    on left: 13 14, on right: 14 17 20 23
multiple_newline (50)
    on left: 15 16, on right: 16 56
array (51)
    on left: 17 18 19 20 21 22, on right: 27 46 48 61 127
array_plus (52)
    on left: 23 24 25, on right: 105 128
values (53)
    on left: 26 27 28, on right: 29 30 106 107
multiple_values (54)
    on left: 29 30, on right: 30 35
variable_list (55)
    on left: 31 32, on right: 32 34 35 41 47
assignment (56)
    on left: 33 34 35, on right: 49 96 97 121
string (57)
    on left: 36 37, on right: 19 22 25 37 40
ret (58)
    on left: 38 39, on right: 116
print_func (59)
    on left: 40 41 42 43 44 45 46, on right: 110 119
declaration (60)
    on left: 47 48 49, on right: 112
multiple_expressions_functions (61)
    on left: 50 51 52 53, on right: 68 94 95 96 97
multiple_expressions (62)
    on left: 54 55 56, on right: 52 53 55 56 91 93
multiple_expressions_no_semi (63)
    on left: 57 58, on right: 42 58
scan_func (64)
    on left: 59, on right: 108
len_func (65)
    on left: 60 61 62, on right: 109
cmp_func (66)
    on left: 63 64 65 66 67, on right: 111
func_def (67)
    on left: 68, on right: 122
func_call (68)
    on left: 69, on right: 123
cmp_operator (69)
    on left: 70, on right: 71 72 73 84 85
cmp_operator_multiple (70)
    on left: 71 72 73, on right: 73 90 91 94 96 103 113
arith_operation (71)
    on left: 74 75 76 77 78 79 80 81, on right: 75 76 77 78 79 80 81
    102 117 124
logical_operator (72)
    on left: 82 83 84 85, on right: 86 87 88 89
logical_operator_multiple (73)
    on left: 86 87 88 89, on right: 89 92 93 95 97 104 114
if_func (74)
    on left: 90 91 92 93, on right: 115
while_func (75)
    on left: 94 95, on right: 125
for_func (76)
    on left: 96 97, on right: 126
plus_minus (77)
    on left: 98 99 100 101, on right: 96 97
expr_assignment (78)
    on left: 102 103 104 105 106, on right: 120
return (79)
    on left: 107, on right: 129
expr_no_semi (80)
    on left: 108 109 110 111 112 113 114 115 116 117, on right: 44
    57 58 90 92 118
expr (81)
    on left: 118 119 120 121 122 123 124 125 126 127 128 129, on right:
    3 5 50 51 54 55 56


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . NEWLINE
    3        | program . expr NEWLINE
    4        | program . error NEWLINE
    5        | program . expr

    $end        shift, and go to state 2
    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    MINUS       shift, and go to state 7
    NEG         shift, and go to state 8
    NEWLINE     shift, and go to state 9
    PRINT       shift, and go to state 10
    LEFT_PT     shift, and go to state 11
    TYPE        shift, and go to state 12
    SCAN        shift, and go to state 13
    LEN         shift, and go to state 14
    CMP         shift, and go to state 15
    FUNC        shift, and go to state 16
    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    FOR         shift, and go to state 19
    RETURN      shift, and go to state 20
    LOG_NOT     shift, and go to state 21
    LEFT_AR     shift, and go to state 22

    SEMICOLON  reduce using rule 33 (assignment)

    number                     go to state 23
    term                       go to state 24
    array                      go to state 25
    array_plus                 go to state 26
    variable_list              go to state 27
    assignment                 go to state 28
    ret                        go to state 29
    print_func                 go to state 30
    declaration                go to state 31
    scan_func                  go to state 32
    len_func                   go to state 33
    cmp_func                   go to state 34
    func_def                   go to state 35
    func_call                  go to state 36
    cmp_operator               go to state 37
    cmp_operator_multiple      go to state 38
    arith_operation            go to state 39
    logical_operator           go to state 40
    logical_operator_multiple  go to state 41
    if_func                    go to state 42
    while_func                 go to state 43
    for_func                   go to state 44
    expr_assignment            go to state 45
    return                     go to state 46
    expr_no_semi               go to state 47
    expr                       go to state 48


state 2

    0 $accept: program $end .

    $default  accept


state 3

    4 program: program error . NEWLINE

    NEWLINE  shift, and go to state 49


state 4

    9 term: IDENTIFIER .
   20 array: IDENTIFIER . LEFT_AR multiple_int RIGHT_AR
   21      | IDENTIFIER . LEFT_AR multiple_float RIGHT_AR
   22      | IDENTIFIER . LEFT_AR string RIGHT_AR
   31 variable_list: IDENTIFIER .
   32              | IDENTIFIER . COMMA variable_list
   69 func_call: IDENTIFIER . LEFT_PT term COMMA term RIGHT_PT
   82 logical_operator: IDENTIFIER . LOGIC_OPERATOR IDENTIFIER
  102 expr_assignment: IDENTIFIER . ASSIGNOP arith_operation
  103                | IDENTIFIER . ASSIGNOP cmp_operator_multiple
  104                | IDENTIFIER . ASSIGNOP logical_operator_multiple
  105                | IDENTIFIER . ASSIGNOP array_plus
  106                | IDENTIFIER . ASSIGNOP values

    LEFT_PT         shift, and go to state 50
    ASSIGNOP        shift, and go to state 51
    COMMA           shift, and go to state 52
    LOGIC_OPERATOR  shift, and go to state 53
    LEFT_AR         shift, and go to state 54

    ASSIGNOP  [reduce using rule 31 (variable_list)]
    $default  reduce using rule 9 (term)


state 5

    6 number: INTEGER .

    $default  reduce using rule 6 (number)


state 6

    7 number: FLOAT .

    $default  reduce using rule 7 (number)


state 7

   79 arith_operation: MINUS . arith_operation

    IDENTIFIER  shift, and go to state 55
    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    MINUS       shift, and go to state 7
    NEG         shift, and go to state 8
    LEFT_PT     shift, and go to state 11

    number           go to state 23
    term             go to state 56
    arith_operation  go to state 57


state 8

    8 number: NEG . number

    INTEGER  shift, and go to state 5
    FLOAT    shift, and go to state 6
    NEG      shift, and go to state 8

    number  go to state 58


state 9

    2 program: program NEWLINE .

    $default  reduce using rule 2 (program)


state 10

   40 print_func: PRINT . LEFT_PT string RIGHT_PT
   41           | PRINT . LEFT_PT variable_list RIGHT_PT
   42           | PRINT . LEFT_PT multiple_expressions_no_semi RIGHT_PT
   43           | PRINT . LEFT_PT STRING COMMA IDENTIFIER RIGHT_PT
   44           | PRINT . LEFT_PT STRING COMMA expr_no_semi RIGHT_PT
   45           | PRINT . LEFT_PT IDENTIFIER RIGHT_PT
   46           | PRINT . LEFT_PT IDENTIFIER array RIGHT_PT

    LEFT_PT  shift, and go to state 59


state 11

   81 arith_operation: LEFT_PT . arith_operation RIGHT_PT

    IDENTIFIER  shift, and go to state 55
    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    MINUS       shift, and go to state 7
    NEG         shift, and go to state 8
    LEFT_PT     shift, and go to state 11

    number           go to state 23
    term             go to state 56
    arith_operation  go to state 60


state 12

   47 declaration: TYPE . variable_list
   48            | TYPE . array
   49            | TYPE . assignment

    IDENTIFIER  shift, and go to state 61
    LEFT_AR     shift, and go to state 62

    $default  reduce using rule 33 (assignment)

    array          go to state 63
    variable_list  go to state 64
    assignment     go to state 65


state 13

   59 scan_func: SCAN . LEFT_PT IDENTIFIER RIGHT_PT

    LEFT_PT  shift, and go to state 66


state 14

   60 len_func: LEN . LEFT_PT STRING RIGHT_PT
   61         | LEN . LEFT_PT array RIGHT_PT
   62         | LEN . LEFT_PT IDENTIFIER RIGHT_PT

    LEFT_PT  shift, and go to state 67


state 15

   63 cmp_func: CMP . LEFT_PT STRING COMMA STRING RIGHT_PT
   64         | CMP . LEFT_PT IDENTIFIER COMMA IDENTIFIER RIGHT_PT
   65         | CMP . LEFT_PT STRING COMMA IDENTIFIER RIGHT_PT
   66         | CMP . LEFT_PT IDENTIFIER COMMA STRING RIGHT_PT
   67         | CMP . LEFT_PT number COMMA number RIGHT_PT

    LEFT_PT  shift, and go to state 68


state 16

   68 func_def: FUNC . IDENTIFIER LEFT_PT TYPE IDENTIFIER COMMA TYPE IDENTIFIER RIGHT_PT multiple_expressions_functions RIGHT_BR

    IDENTIFIER  shift, and go to state 69


state 17

   90 if_func: IF . LEFT_PT cmp_operator_multiple RIGHT_PT expr_no_semi
   91        | IF . LEFT_PT cmp_operator_multiple RIGHT_PT LEFT_BR multiple_expressions RIGHT_BR
   92        | IF . LEFT_PT logical_operator_multiple RIGHT_PT expr_no_semi
   93        | IF . LEFT_PT logical_operator_multiple RIGHT_PT LEFT_BR multiple_expressions RIGHT_BR

    LEFT_PT  shift, and go to state 70


state 18

   94 while_func: WHILE . LEFT_PT cmp_operator_multiple RIGHT_PT multiple_expressions_functions RIGHT_BR
   95           | WHILE . LEFT_PT logical_operator_multiple RIGHT_PT multiple_expressions_functions RIGHT_BR

    LEFT_PT  shift, and go to state 71


state 19

   96 for_func: FOR . LEFT_PT assignment SEMICOLON cmp_operator_multiple SEMICOLON plus_minus RIGHT_PT multiple_expressions_functions RIGHT_BR
   97         | FOR . LEFT_PT assignment SEMICOLON logical_operator_multiple SEMICOLON plus_minus RIGHT_PT multiple_expressions_functions RIGHT_BR

    LEFT_PT  shift, and go to state 72


state 20

   38 ret: RETURN . INTEGER
   39    | RETURN . IDENTIFIER
  107 return: RETURN . values

    IDENTIFIER  shift, and go to state 73
    STRING      shift, and go to state 74
    INTEGER     shift, and go to state 75
    FLOAT       shift, and go to state 6
    NEG         shift, and go to state 8
    LEFT_AR     shift, and go to state 62

    number  go to state 23
    term    go to state 76
    array   go to state 77
    values  go to state 78


state 21

   83 logical_operator: LOG_NOT . IDENTIFIER
   85                 | LOG_NOT . RIGHT_PT cmp_operator LEFT_PT
   88 logical_operator_multiple: LOG_NOT . RIGHT_PT logical_operator LEFT_PT

    IDENTIFIER  shift, and go to state 79
    RIGHT_PT    shift, and go to state 80


state 22

   17 array: LEFT_AR . multiple_int RIGHT_AR
   18      | LEFT_AR . multiple_float RIGHT_AR
   19      | LEFT_AR . string RIGHT_AR
   23 array_plus: LEFT_AR . multiple_int RIGHT_AR PLUS LEFT_AR multiple_int RIGHT_AR
   24           | LEFT_AR . multiple_float RIGHT_AR PLUS LEFT_AR multiple_float RIGHT_AR
   25           | LEFT_AR . string RIGHT_AR PLUS LEFT_AR string RIGHT_AR

    STRING   shift, and go to state 81
    INTEGER  shift, and go to state 82
    FLOAT    shift, and go to state 83

    multiple_float  go to state 84
    multiple_int    go to state 85
    string          go to state 86


state 23

   10 term: number .

    $default  reduce using rule 10 (term)


state 24

   70 cmp_operator: term . CMP_OPERATOR term
   74 arith_operation: term .

    CMP_OPERATOR  shift, and go to state 87

    $default  reduce using rule 74 (arith_operation)


state 25

  127 expr: array . SEMICOLON

    SEMICOLON  shift, and go to state 88


state 26

  128 expr: array_plus . SEMICOLON

    SEMICOLON  shift, and go to state 89


state 27

   34 assignment: variable_list . ASSIGNOP variable_list
   35           | variable_list . ASSIGNOP multiple_values

    ASSIGNOP  shift, and go to state 90


state 28

  121 expr: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 91


state 29

  116 expr_no_semi: ret .

    $default  reduce using rule 116 (expr_no_semi)


state 30

  110 expr_no_semi: print_func .
  119 expr: print_func . SEMICOLON

    SEMICOLON  shift, and go to state 92

    SEMICOLON  [reduce using rule 110 (expr_no_semi)]


state 31

  112 expr_no_semi: declaration .

    $default  reduce using rule 112 (expr_no_semi)


state 32

  108 expr_no_semi: scan_func .

    $default  reduce using rule 108 (expr_no_semi)


state 33

  109 expr_no_semi: len_func .

    $default  reduce using rule 109 (expr_no_semi)


state 34

  111 expr_no_semi: cmp_func .

    $default  reduce using rule 111 (expr_no_semi)


state 35

  122 expr: func_def .

    $default  reduce using rule 122 (expr)


state 36

  123 expr: func_call . SEMICOLON

    SEMICOLON  shift, and go to state 93

